--- a/index.html
+++ b/index.html
@@ -4,71 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheat Sheet</title>
     <link rel="stylesheet" href="style.css">
+    <title>Calculator</title>
 </head>
-  <body>
-    <h1>HTML Table Reference</h1>
-    <h2>Table Tags</h2>
-    <table>
-      <thead>
-        <th>Tag</th>
-        <th>Name</th>
-        <th>Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td><span class="code">&lt;table&gt;</span></td>
-          <td>Table</td>
-          <td>The wrapper element for all HTML tables.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;thead&gt;</span></td>
-          <td>Table Head</td>
-          <td>The set of rows defining the column headers in a table.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;tbody&gt;</span></td>
-          <td>Table Body</td>
-          <td>The set of rows containing actual table data.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;tr&gt;</span></td>
-          <td>Table Row</td>
-          <td>The table row container.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;td&gt;</span></td>
-          <td>Table Data</td>
-          <td>The table row container.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;tfoot&gt;</span></td>
-          <td>Table Foot</td>
-          <td>The set of rows defining the footer in a table.</td>
-        </tr>
-      </tbody>
-    </table>
+<body>
+    
+    <div class="wrapper">
+        <section class="screen">
+            0
+        </section>
+    
+        <section class="calc-buttons">
+            <div class="calc-button-row">
+                <button class="calc-button double">
+                    C
+                </button>
+                <button class="calc-button">
+                    &larr;
+                </button>
+                <button class="calc-button">
+                    &divide;
+                </button>
+            </div>
 
-    <h2>Table Attributes</h2>
-    <table>
-      <thead>
-        <th>Attribute</th>
-        <th>Name</th>
-        <th>Description</th>
-      </thead>
-      <tbody>
-        <tr>
-            <td><span class="code">colspan</span></td> 
-            <td>Column Span</td>
-            <td>Defines how many columns a td element should span.</td>
-          </tr>
-        <tr>
-          <td><span class="code">rowspan</span></td>
-          <td>Row Span</td>
-          <td>Defines how many rows a td element should span.</td>
-        </tr>
-      </tbody>
-    </table>
-  </body>
+            <div class="calc-button-row">
+                <button class="calc-button">
+                    7
+                </button>
+                <button class="calc-button">
+                    8
+                </button>
+                <button class="calc-button">
+                    9
+                </button>
+                <button class="calc-button">
+                    &times;
+                </button>
+            </div>
+
+            <div class="calc-button-row">
+                <button class="calc-button">
+                    4
+                </button>
+                <button class="calc-button">
+                    5
+                </button>
+                <button class="calc-button">
+                    6
+                </button>
+                <button class="calc-button">
+                    &minus;
+                </button>
+            </div>
+
+            <div class="calc-button-row">
+                <button class="calc-button">
+                    1
+                </button>
+                <button class="calc-button">
+                    2
+                </button>
+                <button class="calc-button">
+                    3
+                </button>
+                <button class="calc-button">
+                    &plus;
+                </button>
+            </div>
+
+            <div class="calc-button-row">
+                <button class="calc-button triple">
+                    0
+                </button>
+                <button class="calc-button">
+                    &equals;
+                </button>
+
+            </div>
+
+        </section>
+
+    </div>
+
+
+
+    <script src="script.js"></script>
+</body>
 </html>
